data/postgres/k8s/postgres-statefulset-local.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres
  namespace: posey
spec:
  serviceName: "postgres"
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      dnsPolicy: ClusterFirstWithHostNet
      securityContext:
        fsGroup: 999
      containers:
      - name: postgres
        image: posey-postgres:latest
        imagePullPolicy: IfNotPresent
        securityContext:
          runAsUser: 999
          runAsGroup: 999
        ports:
        - containerPort: 3333
          name: postgres
        volumeMounts:
        - name: postgres-data
          mountPath: /var/lib/postgresql/data
        lifecycle:
          preStop:
            exec:
              command: ["sh", "-c", "pg_ctl -D /var/lib/postgresql/data/pgdata stop -m fast"]
        readinessProbe:
          exec:
            command:
            - pg_isready
            - -U
            - pocketdb
            - -d
            - postgres
            - -p
            - "3333"
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 5
        livenessProbe:
          exec:
            command:
            - pg_isready
            - -U
            - pocketdb
            - -d
            - postgres
            - -p
            - "3333"
          initialDelaySeconds: 60
          periodSeconds: 10
          timeoutSeconds: 5
      volumes:
      - name: postgres-data
        emptyDir:
          medium: ""
          sizeLimit: "2Gi"
